log
Thu 05 Oct 2023 06:56:50 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  1|5
total_score: 5/70
df157b5
Thu 05 Oct 2023 06:57:25 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
523d10f
Thu 05 Oct 2023 07:02:39 PM UTC: 
 sudoku.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  2|4
total_score: 15/70
a6d6c13
Thu 05 Oct 2023 07:02:48 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
92fd8fd
Thu 05 Oct 2023 07:03:06 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7b6f782
Thu 05 Oct 2023 07:07:36 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
842dfde
Thu 05 Oct 2023 07:10:09 PM UTC: 
 sudoku.c | 19 +++++++++++++------
 1 file changed, 13 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
a6d5576
Thu 05 Oct 2023 07:13:14 PM UTC: 
 sudoku.c | 21 ++++++++++++++++++---
 1 file changed, 18 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
8ba8fdc
Thu 05 Oct 2023 07:17:05 PM UTC: 
 sudoku.c | 28 ++++++----------------------
 1 file changed, 6 insertions(+), 22 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
30f122f
Thu 05 Oct 2023 07:17:23 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:83:1: error: control reaches end of non-void function [-Werror=return-type]
   83 | }
      | ^
At top level:
sudoku.c:47:9: error: ‘is_valid’ defined but not used [-Werror=unused-function]
   47 |     int is_valid(Node* n) {
      |         ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a5cd0c9
